PCS BAckup 26Dec2023/Backup-Source/objects/Rx_Compliance_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Vision_Agreement_No__c</fullName>
        <label>Agreement No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billed_Price__c</fullName>
        <label>Billed Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_Date__c</fullName>
        <label>Billing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_IP_Document__c</fullName>
        <label>Billing/IP Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Billing_Type__c</fullName>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Contract_Updated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Updated</label>
        <referenceTo>Phoenix_Contract__c</referenceTo>
        <relationshipName>Rx_Compliance_Direct_Sales_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Rx_Compliance_Direct_Sales_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Group_1__c</fullName>
        <label>Customer Group 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy_Name__c</fullName>
        <label>Customer Hierarchy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Hierarchy__c</fullName>
        <label>Customer Hierarchy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Awarded_Qty_Monthly__c</fullName>
        <formula>IF( ISNULL(Vision_Direct_Awarded_Qty__c) , 0, Vision_Direct_Awarded_Qty__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Awarded Qty Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Awarded_Qty__c</fullName>
        <label>Direct Awarded Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Awarded_Value_Monthly__c</fullName>
        <formula>IF( ISNULL(Vision_Direct_Awarded_Value__c) , 0, Vision_Direct_Awarded_Value__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Direct Awarded Value Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Awarded_Value__c</fullName>
        <label>Direct Awarded Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Price_Effective_Date__c</fullName>
        <label>Direct Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Direct_Rebates__c</fullName>
        <label>Direct Rebates</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Division__c</fullName>
        <label>Division</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Gross__c</fullName>
        <label>Gross</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Awarded_Qty_Monthly__c</fullName>
        <formula>IF( ISNULL(Vision_Indirect_Awarded_Qty__c) , 0, Vision_Indirect_Awarded_Qty__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Awarded Qty Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Awarded_Qty__c</fullName>
        <label>Indirect Awarded Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Awarded_Value_Monthly__c</fullName>
        <formula>IF( ISNULL(Vision_Indirect_Awarded_Value__c) , 0, Vision_Indirect_Awarded_Value__c/12)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indirect Awarded Value Monthly</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Awarded_Value__c</fullName>
        <label>Indirect Awarded Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Indirect_Price_Effective_Date__c</fullName>
        <label>Indirect Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_NDC__c</fullName>
        <label>NDC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Direct_Rebates__c</fullName>
        <label>Net Direct Rebates</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Net_Dollar__c</fullName>
        <label>Net Dollar</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Order_CR_Type__c</fullName>
        <label>Order/CR Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Created_By__c</fullName>
        <label>Order Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Created_Name__c</fullName>
        <label>Order Created Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Reason_Code__c</fullName>
        <label>Order Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Order_Reason__c</fullName>
        <label>Order Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_PO_CR_Reference_Number__c</fullName>
        <label>PO/CR Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Package_Size__c</fullName>
        <label>Package Size</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Posting_Month__c</fullName>
        <label>Posting Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Price_Effective_Date__c</fullName>
        <label>Price Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Pricing_Date__c</fullName>
        <label>Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vision Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Rx_Compliance_Direct_Sales_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Profic_Center__c</fullName>
        <label>Profic Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Quantity_in_Units__c</fullName>
        <label>Quantity in Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_SAP_Material__c</fullName>
        <label>SAP Material</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_CR_Doc_Item__c</fullName>
        <label>Sales/CR Doc Item</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Sales_CR_Doc__c</fullName>
        <label>Sales/CR Doc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Shelf_Life_Exp_Date__c</fullName>
        <label>Shelf Life Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_To_Customer__c</fullName>
        <label>Ship-To Customer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Ship_to_State__c</fullName>
        <label>Ship-to State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Sold_to_Rebate_Recipient__c</fullName>
        <label>Sold-to/Rebate Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Awarded_Qty_Monthly__c</fullName>
        <formula>Vision_Direct_Awarded_Qty_Monthly__c  +  Vision_Indirect_Awarded_Qty_Monthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Total Awarded Qty Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Awarded_Qty__c</fullName>
        <formula>Vision_Direct_Awarded_Qty__c  +  Vision_Indirect_Awarded_Qty__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Total Awarded Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Awarded_Value_Monthly__c</fullName>
        <formula>Vision_Direct_Awarded_Value_Monthly__c  +  Vision_Indirect_Awarded_Value_Monthly__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Total Awarded Value Monthly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Total_Awarded_Value__c</fullName>
        <formula>Vision_Direct_Awarded_Value__c  +  Vision_Indirect_Awarded_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vision Total Awarded Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vision_Unique_Identifier__c</fullName>
        <label>Vision Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_ZWAC__c</fullName>
        <label>ZWAC</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week1_Direct_Actual_Qty__c</fullName>
        <label>Week1 Direct Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week1_Direct_Actual_Value__c</fullName>
        <label>Week1 Direct Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week1_Indirect_Actual_Qty__c</fullName>
        <label>Week1 Indirect Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week1_Indirect_Actual_Value__c</fullName>
        <label>Week1 Indirect Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week2_Direct_Actual_Qty__c</fullName>
        <label>Week2 Direct Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week2_Direct_Actual_Value__c</fullName>
        <label>Week2 Direct Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week2_Indirect_Actual_Qty__c</fullName>
        <label>Week2 Indirect Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week2_Indirect_Actual_Value__c</fullName>
        <label>Week2 Indirect Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week3_Direct_Actual_Qty__c</fullName>
        <label>Week3 Direct Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week3_Direct_Actual_Value__c</fullName>
        <label>Week3 Direct Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Week3_Indirect_Actual_Qty__c</fullName>
        <label>Week3 Indirect Actual Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week3_Indirect_Actual_Value__c</fullName>
        <label>Week3 Indirect Actual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Rx Compliance Summary</label>
    <nameField>
        <label>Rx Compliance Direct Sales Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rx Compliance Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>